force-app/main/default/objects/AA_Service__c/AA_Service__c.object-meta.xml
<CustomObject>
    <label>AA Service</label>
    <nameField>
        <label>AA Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AA Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>