force-app/main/default/objects/AA_Service__c/fields/AA_Service_Category__c.field-meta.xml
<CustomField>
    <fullName>AA_Service_Category__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>AA Service Category</label>
    <referenceTo>AA_Service_Category__c</referenceTo>
    <relationshipLabel>Service</relationshipLabel>
    <relationshipName>Service</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>