force-app/main/default/objects/AA_Service__c/fields/Count_Appointments_Done__c.field-meta.xml
<CustomField>
    <fullName>Count_Appointments_Done__c</fullName>
    <label>Count Appointments Done</label>
    <summaryFilterItems>
        <field>AA_Appointment__c.Status__c</field>
        <operation>equals</operation>
        <value>Done</value>
    </summaryFilterItems>
    <summaryForeignKey>AA_Appointment__c.Service__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>