force-app/main/default/objects/AA_Service__c/fields/Order_Index__c.field-meta.xml
<CustomField>
    <fullName>Order_Index__c</fullName>
    <description>Number used to sort records in the UI.</description>
    <label>Order Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>