force-app/main/default/objects/AA_Service__c/fields/Requires_Manual_Coordination__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manual_Coordination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if true, the public agenda won&apos;t allow creating an appointment, it will provide a whastapp link instead</description>
    <inlineHelpText>if true, the public agenda won&apos;t allow creating an appointment, it will provide a whastapp link instead</inlineHelpText>
    <label>Requires Manual Coordination</label>
    <type>Checkbox</type>
</CustomField>