force-app/main/default/objects/AA_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AA_Service_Category__c</columns>
    <columns>Business_Branch__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Price__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>