force-app/main/default/objects/AA_Service__c/listViews/Silvina_U_as_Pocitos.listView-meta.xml
<ListView>
    <fullName>Silvina_U_as_Pocitos</fullName>
    <columns>NAME</columns>
    <columns>AA_Service_Category__c</columns>
    <columns>Display_Name__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Price__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Business_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Silvina</value>
    </filters>
    <label>Silvina Uñas Pocitos</label>
</ListView>